# AGH-notification-service

./: .env.example  README.md  db.py  health.py  main.py  models.py  pyproject.toml  settings.py
mailer/: emails.py  models.py  renderer.py
mailer/email_builders/: assignment_creation.py  assignment_deadline_approach.py  assignment_deadline_update.py  base.py  email_registry.py  grade_return.py
mailer/templates/: assignment_creation.html  assignment_deadline_approach.html  assignment_deadline_update.html  grade_return.html
notification/: models.py
