[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "annotated-types==0.7.0",
    "asyncpg==0.31.0",
    "blinker==1.9.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "idna==3.18",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "markupsafe==3.0.3",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "platformdirs==4.10.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.4.1",
    "requests==2.34.2",
    "resend[async]==2.32.2",
    "six==1.17.0",
    "types-aiobotocore-sqs>=3.7.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "werkzeug==3.1.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "boto3-stubs[sqs]>=1.43.39",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
